samples/_failures_safe/1761421226_79b0c4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a6a1f02e.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_a6a1f02e.c:140:16: error: missing terminating " character
  140 |         printf("%d.
      |                ^~~~
./samples/SAFE/__tmp_a6a1f02e.c:140:9: error: expected expression at end of input
  140 |         printf("%d.
      |         ^~~~~~
./samples/SAFE/__tmp_a6a1f02e.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a6a1f02e.c:140:9: error: expected declaration or statement at end of input
